# dacs-agent-focus-mode

./: .env.example  .gitignore  .mailmap  ACTION_PLAN.md  CITATION.cff  LICENSE  README.md  example.env  requirements.txt  run_both.py
.github/: copilot-instructions.md
agents/: __init__.py  base_agent.py  code_writer_agent.py  data_processor_agent.py  debugger_agent.py  generic_agent.py  llm_agent.py  long_writer_agent.py  research_agent.py
dacs_sdk/: README.md  mkdocs.yml  pyproject.toml
dacs_sdk/dacs/: __init__.py  _agent.py  _context_builder.py  _logger.py  _monitor.py  _orchestrator.py  _protocols.py  _registry.py  _runtime.py  _step_agent.py
dacs_sdk/docs/: changelog.md  concepts.md  index.md  quickstart.md
dacs_sdk/docs/api/: agent.md  context_builder.md  logger.md  monitor.md  orchestrator.md  protocols.md  registry.md  runtime.md
dacs_sdk/docs/research/: benchmarks.md  overview.md
dacs_sdk/docs/tutorials/: 01_hello_dacs.md  02_three_agents.md  03_custom_agents.md  04_custom_endpoints.md
dacs_sdk/tests/: test_context_builder.py  test_orchestrator.py  test_protocols.py  test_registry.py
docs/: EXPERIMENT_PLAN.md  OPENCLAW_INTEGRATION_PLAN.md  PHASE_2_PLAN.md  architecture.md  interfaces.md  real_agent_experiment_architecture.md
experiments/: analyze_ablations.py  analyze_n15_n20.py  build_ablation_csv.py  fit_scaling_law.py  gen_phase4_fig.py  llm_judge_phase3.py  llm_judge_s8.py  metrics.py  plot_ablations.py  plot_pareto.py  plot_phase1.py  plot_phase2_phase3.py  run_experiment.py  task_suite.py
experiments_concurrency/: __init__.py  _smoke_test.py  analyze.py  event_injector.py  harness.py  rubric_judge.py  run.py  scenario_defs.py
experiments_gaia/: __init__.py  dataset.py  judge.py  run.py  scenario_defs.py
experiments_oif/: _smoke_test.py  judge.py  run.py  scenario_defs.py
experiments_real_agent/: __init__.py  _rebuild_summary.py  _smoke_test.py  analyze.py  judge.py  (+2 more)
(+512 files in other folders)
