[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dacs-agent"
version = "0.1.0"
description = "Dynamic Attentional Context Scoping — agent-triggered focus sessions for isolated per-agent steering in multi-agent LLM orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Nickson Patel", email = "nicksonpatel@gmail.com" },
]
keywords = [
  "multi-agent",
  "llm",
  "orchestration",
  "context-management",
  "ai-agents",
  "dacs",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anthropic>=0.40.0",
  "tiktoken>=0.7.0",
]

[project.optional-dependencies]
monitor = ["rich>=13.0.0"]
openai = ["openai>=1.30.0"]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "dacs-agent[monitor]",
  "dacs-agent[docs]",
]

[project.urls]
Homepage = "https://github.com/nickson/agent-focus-mode"
Documentation = "https://github.com/nickson/agent-focus-mode#readme"
Repository = "https://github.com/nickson/agent-focus-mode"
"Bug Tracker" = "https://github.com/nickson/agent-focus-mode/issues"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"

[tool.hatch.build.targets.wheel]
packages = ["dacs"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
